--- a/leads/templates/leads/lead_detail.html
+++ b/leads/templates/leads/lead_detail.html
@@ -17,11 +17,16 @@
     </style>
 </head>
 <body>
-    <a href="/leads/"> Go back to leads </a>
+    <a href="{% url 'leads:lead-list' %}"> Go back to leads </a>
     <hr />
-    <h1> This is the detail of {{ lead.first_name }} </h1>
+    <h1> This is the detail of {{ lead.first_name }}: </h1>
+    <p> This persion's id: {{ lead.id }} </p>
     <p> This persion's first_name: {{ lead.first_name }} </p>
     <p> This persion's last_name: {{ lead.last_name }} </p>
     <p> This persion's age: {{ lead.age }} </p>
+    <p> The lead responsible for this agent is: {{ lead.agent }} </p>
+    <hr />
+    <a href="{% url 'leads:lead-update' lead.pk %}">Update</a>
+    <a href="{% url 'leads:lead-delete' lead.pk %}">Delete</a>
 </body>
 </html>
