--- a/leads/templates/leads/lead_create.html
+++ b/leads/templates/leads/lead_create.html
@@ -3,7 +3,7 @@
 {% block content %}
     <a href="{% url 'leads:lead-list' %}"> Go back to leads </a>
     <hr />
-    <h1> Create a new lead </h1>
+    <h1> Create a new lead: </h1>
     <form method="POST" >
         {% csrf_token %}
         {{ form.as_p }}
