--- a/agents/templates/agents/agent_delete.html
+++ b/agents/templates/agents/agent_delete.html
@@ -1,9 +1,9 @@
 {% extends 'base.html' %}
 
 {% block content %}
-    <a href="{% url 'leads:lead-list' %}"> Go back to leads </a>
+    <a href="{% url 'agents:agent-list' %}"> Go back to agents </a>
     <hr />
-    <h1> Are you sure you want to delete this lead? </h1>
+    <h1> Are you sure you want to delete this agent? </h1>
     <form method="POST" >
         {% csrf_token %}
         {{ form.as_p }}
