password reset operations and leads and agent query modified

--- a/templates/registration/password_reset_form.html
+++ b/templates/registration/password_reset_form.html
@@ -6,9 +6,9 @@
     <form method="POST">
         {% csrf_token %}
         {{ form.as_p }}
-        <button type="submit"> Login </button>
+        <button type="submit"> Reset password </button>
         <hr />
-        <a href="{% url 'reset-password' %}">Forgot password?</a>
+        <a href="{% url 'login' %}">Have an account?</a>
     </form>
 
 {% endblock content %}
