--- a/agents/templates/agents/agent_create.html
+++ b/agents/templates/agents/agent_create.html
@@ -1,12 +1,17 @@
 {% extends 'base.html' %}
+{% load tailwind_filters %}
+
 
 {% block content %}
-    <a href="{% url 'agents:agent-list' %}"> Go back to agents </a>
-    <hr />
-    <h1> Create a new agent: </h1>
-    <form method="POST" >
-        {% csrf_token %}
-        {{ form.as_p }}
-        <button type="submit"> Submit </button>
-    </form>
+    <div class="max-w-lg mx-auto">
+        <div class="py-5 border-b border-gray-200">
+            <a href="{% url 'agents:agent-list' %}" class="hover:text-blue-500 mt-3">Go back to agents</a>
+        </div>
+        <h1 class="text-4xl text-gray-800"> Create a new agent: </h1>
+        <form method="POST" >
+            {% csrf_token %}
+            {{ form|crispy }}
+            <button type="submit" class="w-full text-white bg-blue-500 hover:bg-blue-600 px-3 py-2 rounded-md"> Submit </button>
+        </form>
+    </div>
 {% endblock content %}
