--- a/leads/templates/leads/lead_detail.html
+++ b/leads/templates/leads/lead_detail.html
@@ -9,7 +9,7 @@
                     <h1 class="text-gray-900 text-3xl title-font font-medium mb-4">{{ lead.first_name }} {{ lead.last_name }}</h1>
                     <div class="flex mb-4">
                         <a href="{% url 'leads:lead-detail' lead.pk %}" class="flex-grow text-indigo-500 border-b-2 border-indigo-500 py-2 text-lg px-1">Overview</a>
-                        <a class="flex-grow border-b-2 border-gray-300 py-2 text-lg px-1">Reviews</a>
+                        <a href="{% url 'leads:lead-category-update' lead.pk %}" class="flex-grow border-b-2 border-gray-300 py-2 text-lg px-1">Category</a>
                         <a href="{% url 'leads:lead-update' lead.pk %}" class="flex-grow border-b-2 border-gray-300 py-2 text-lg px-1">Update details</a>
                     </div>
                     <p class="leading-relaxed mb-4">Fam locavore kickstarter distillery. Mixtape chillwave tumeric sriracha taximy chia microdosing tilde DIY. XOXO fam inxigo juiceramps cornhole raw denim forage brooklyn. Everyday carry +1 seitan poutine tumeric. Gastropub blue bottle austin listicle pour-over, neutra jean.</p>
@@ -18,12 +18,12 @@
                         <span class="ml-auto text-gray-900">{{ lead.age }}</span>
                     </div>
                     <div class="flex border-t border-gray-200 py-2">
-                        <span class="text-gray-500">Location</span>
-                        <span class="ml-auto text-gray-900">Dummy location</span>
+                        <span class="text-gray-500">Email</span>
+                        <span class="ml-auto text-gray-900">{{lead.email}}</span>
                     </div>
                     <div class="flex border-t border-b mb-6 border-gray-200 py-2">
-                        <span class="text-gray-500">Cell Phone</span>
-                        <span class="ml-auto text-gray-900">+4546498748465</span>
+                        <span class="text-gray-500">Phone number</span>
+                        <span class="ml-auto text-gray-900">{{ lead.phone_number }}</span>
                     </div>
                     <div class="flex">
                         <button class="flex ml-auto text-white bg-indigo-500 border-0 py-2 px-6 focus:outline-none hover:bg-indigo-600 rounded">Button</button>
