--- a/leads/templates/leads/lead_list.html
+++ b/leads/templates/leads/lead_list.html
@@ -6,11 +6,11 @@
         <div class="w-full mb-6 py-6 flex justify-between items-center border-b border-gray-200">
             <div>
                 <h1 class="text-4xl text-gray-800"> Leads </h1>
+                <a class="text-gray-500 hover:text-blue-500" href="{% url 'leads:category-list' %}"> View categories</a>
             </div>
             {% if request.user.is_organisor %}
             <div>
-                <a class="text-gray-500 hover:text-blue-500" href="{% url 'leads:lead-create' %}"> Create a new lead
-                </a>
+                <a class="text-gray-500 hover:text-blue-500" href="{% url 'leads:lead-create' %}"> Create a new lead</a>
             </div>
             {% endif %}
         </div>
@@ -28,7 +28,7 @@
                     <div class="flex-grow">
                         <h2 class="text-gray-900 text-lg title-font font-medium mb-3"> {{ lead.first_name }}
                             {{ lead.last_name }} </h2>
-                        <p class="leading-relaxed text-base">Description.</p>
+                        <p class="leading-relaxed text-base">{{ lead.description }}</p>
                         <a href="{% url 'leads:lead-detail' lead.pk %}"
                             class="mt-3 text-indigo-500 inline-flex items-center">View this lead
                             <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round"
@@ -59,7 +59,7 @@
                     <div class="flex-grow">
                         <h2 class="text-gray-900 text-lg title-font font-medium mb-3"> {{ lead.first_name }}
                             {{ lead.last_name }} </h2>
-                        <p class="leading-relaxed text-base">Description.</p>
+                        <p class="leading-relaxed text-base">{{ lead.description }}</p>
                         <a href="{% url 'leads:assign-agent' lead.pk %}"
                             class="mt-3 text-indigo-500 inline-flex items-center">Assign an agent
                             <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round"
