--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -1,14 +1,19 @@
 {% extends 'base.html' %}
+{% load tailwind_filters %}
 
 
 {% block content %}
-
-    <form method="POST">
+<div class="max-w-lg mx-auto">
+    <div class="py-5 border-b border-gray-200">
+        <a href="{% url 'signup' %}" class="hover:text-blue-500 mt-3">Don't have an account?</a>
+    </div>
+    <form method="POST" class="mt-5">
         {% csrf_token %}
-        {{ form.as_p }}
-        <button type="submit"> Login </button>
-        <hr />
-        <a href="{% url 'reset-password' %}">Forgot password?</a>
+        {{ form|crispy }}
+        <button type="submit" class="w-full text-white bg-blue-500 hover:bg-blue-600 px-3 py-2 rounded-md"> Login </button>
     </form>
-
+    <div class="py-5 border-t border-gray-200 mt-5">
+        <a href="{% url 'reset-password' %}" class="hover:text-blue-500 mt-3">Forgot password?</a>
+    </div>
+</div>
 {% endblock content %}
