--- a/templates/registration/signup.html
+++ b/templates/registration/signup.html
@@ -1,12 +1,17 @@
 {% extends 'base.html' %}
+{% load tailwind_filters %}
+
 
 
 {% block content %}
-
-    <form method="POST">
-        {% csrf_token %}
-        {{ form.as_p }}
-        <button type="submit"> Signup </button>
-    </form>
-
+    <div class="max-w-lg mx-auto">
+        <form method="POST" class="mt-5">
+            {% csrf_token %}
+            {{ form|crispy }}
+            <button type="submit" class="w-full text-white bg-blue-500 hover:bg-blue-600 px-3 py-2 rounded-md"> Signup </button>
+        </form>
+        <div class="py-5 border-t border-gray-200 mt-5">
+            <a href="{% url 'login' %}" class="hover:text-blue-500 mt-3">Have an account?</a>
+        </div>
+    </div>
 {% endblock content %}
